# c-p5

./: .gitignore  .vimrc  .ycm_extra_conf.py  README.md  WIP  allocator_class.cpp  assoc.txt  cfor.cpp  ch12_mempos.cpp  ch6_6.cpp  ch7.cpp  ch7_old.cpp  ch7_person.cpp  ch7_person.h  ch7screen.cpp  charbits.cpp  const1.cpp  default-arg-main.cpp  default-arg.cpp  default-arg.h  e10_1.cpp  e10_11.cpp  e10_13.cpp  e10_14.cpp  e10_15.cpp  e10_20.cpp  e10_27.cpp  e10_28.cpp  e10_29.cpp  e10_3.cpp  e10_30.cpp  e10_31.cpp  e10_33.cpp  e10_34-37.cpp  e10_4.cpp  e10_6.cpp  e10_7.cpp  e11_16.cpp  e11_24-26.cpp  e11_3-4.cpp  (+206 more)
01_hello_SDL/: 01_hello_SDL.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainargs.cpp  ~Makefile
02_image/: 02_getting_image.cpp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
03_event/: 03_event.cpp  CMakeCache.txt  Makefile  cmake_install.cmake  cmakelists.txt
04_key_presses/: 04_key.cpp  CMakeCache.txt  Makefile  cmake_install.cmake  cmakelists.txt
05_optimized_surface_loading_and_soft_stretching/: 05_stretch.cpp  CMakeCache.txt  Makefile  cmake_install.cmake  cmakelists.home  cmakelists.work
06_extension_libraries_and_loading_other_image_formats/: 06_extension.cpp  CMakeCache.txt  Makefile  cmake_install.cmake  cmakelists.txt
07_texture_loading_and_rendering/: 07_texture_loading_and_rendering.cpp  CMakeCache.txt  Makefile  (+2 more)
wxWidgets/wxWidgetsIntro/_download/Exercise4/: CMakeLists.txt  Exercise4.fbp  FrameProject.cpp  FrameProject.h  MyEventFrame.cpp  MyEventFrame.h  main.cpp
wxWidgets/wxWidgetsIntro/_download/Exercise5/: CMakeLists.txt  Drawing.fbp  DrawingFrame.cpp  DrawingFrame.h  DrawingGenerated.cpp  DrawingGenerated.h  main.cpp
wxWidgets/wxWidgetsIntro/_download/wxFormBuilder/: CMakeLists.txt  MyDerivedFrame.cpp  MyDerivedFrame.h  MyProject.cpp  MyProject.fbp  MyProject.h  main.cpp
(+319 files in other folders)
